# ezoauth

./: Cargo.toml  README.md
examples/: discord.rs
src/: error.rs  lib.rs  server.rs
